--- a/web/index.html
+++ b/web/index.html
@@ -17,10 +17,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://veloxframework.vercel.app" />
     
-    <!-- Performance: Preconnect to external domains if any -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Performance: Fonts are handled by vite-plugin-webfont-dl -->
   </head>
   <body>
     <div id="root"></div>
